@@ -2,6 +2,8 @@
 
 ---- V0.0.4 ----
 
+* Reworked all classes. Now a core object create and call
+  every object (button/manager/etc...) needed
 * Added game function library
 * Correcting the popup on the auto button.
 * Adding color background on the Update AutoRoad button
